# presentations

./: .gitignore  .gitmodules  COPYRIGHT  Makefile  README.md  bd-96-concrete-wrapper.rs  bd-96-concrete.rs  bd-96.rs  cake.cpp  cake.rs  cd-kickoff-2016.html  cd-kickoff-borrowing.html  cd-kickoff-closures.html  cd-kickoff-enums_match.html  cd-kickoff-ex0_hello.html  cd-kickoff-ex1_ownership.html  cd-kickoff-ex2_borrowing.html  cd-kickoff-ex3_structs.html  cd-kickoff-ex4_threads.html  cd-kickoff-ex5_enums_match.html  cd-kickoff-exercises.html  cd-kickoff-hello.html  cd-kickoff-lifetimes.html  cd-kickoff-ownership.html  cd-kickoff-structs.html  cd-kickoff-threads.html  christine-pics.rkt  code-style-darkgrey.css  code-style.css  curry-on2015.html  dictionary-v1.rs  dictionary.ml  dictionary.mli  dropflag-rust2014.rkt  index.html  iwaco-2017.html  lint_example.dot  lint_example.rs  mem_capability_pics.rkt  monartist-padl-2017-slides.html  (+38 more)
cd-kickoff/: Cargo.toml  build.rs
cd-kickoff/src/: lib.md
cd-kickoff/src/exercises/: exercises.md  mod.md
cd-kickoff/src/exercises/borrowing/: borrowing.md
cd-kickoff/src/exercises/closures/: closures.md
cd-kickoff/src/exercises/enums_match/: enums_match.md
cd-kickoff/src/exercises/hello/: hello.md
cd-kickoff/src/exercises/lifetimes/: lifetimes.md
cd-kickoff/src/exercises/ownership/: ownership.md
cd-kickoff/src/exercises/structs/: structs.md
cd-kickoff/src/exercises/threads/: threads.md
cd-kickoff/src/slides/: a00_title.md  a01_abstraction.md  a01_abstraction_source.md  a02_safety.md  a03_concurrency.md  mod.md
cmd-pandoc/: Cargo.toml
cmd-pandoc/src/: lib.rs
craftconf-2017/: Cargo.toml  build.rs
craftconf-2017-deploy/: code-style.css  craftconf-2017.html  fonts.css
craftconf-2017/examples/: vex.cpp  vex.java  vex.rs
craftconf-2017/src/: a00_title.md  a01_opening.md  a02_ownership.md  a03_sharing.md  a04_smaht_diagrams.md  b01_concurrency_demos.md  c01_cargo.md  lib.md  z99_closing.md
curry-on2015/: Cargo.toml  build.rs
curry-on2015/src/: a00_title.md  a01_start.md  k00_concurrency.md  l00_test_ligatures.md  lib.md  z00_conclusion.md  z99_thanks.md
fiability2016/: Cargo.toml  build.rs
fiability2016/src/: a00_title.md  a01_opening.md  a02_ownership.md  a03_sharing.md  a04_smaht_diagrams.md  b01_concurrency_demos.md  lib.md  z99_closing.md
iwaco-2017/: Cargo.toml  build.rs  header.html
iwaco-2017/src/: a00.md  lib.rs  notes.txt
london-tango-demo/: slides.html
monartist-padl-2017/: Cargo.toml  tango-build.rs
monartist-padl-2017/src/: lib.rs  slides.md
qcon-london2016/: Cargo.toml  build.rs
qcon-london2016-deploy/: exercise-style.css  qcon-london2016.html  slide-style.css  style.css
qcon-london2016-deploy/css/theme/: mozilla-sandstone.css
qcon-london2016/src/: a01_opening.md  a02_ownership.md  a03_sharing.md  a04_smaht_diagrams.md  a05_cargo.md  b01_concurrency_demos.md  b02_send_sync.md  c01_cargo.md  lib.md  mandelbrot.md  z99_closing.md
rust-marcomms-agency-day/: Cargo.toml  slide-style.css  tango-build.rs
rust-marcomms-agency-day-2016/: slides.html
rust-marcomms-agency-day/src/: slides.md
rust-paris-meetup-oct2016/: Cargo.toml  slide-style.css  slides.html  tango-build.rs
rust-paris-meetup-oct2016/src/: slides.md
rust-tutorial/: Cargo.toml  build.rs
rust-tutorial/src/: a00_title.md  a03_sharing.md  a04_smaht_diagrams.md  b01_concurrency_demos.md  c01_cargo.md  z99_closing.md
rust-tutorial/src/demos/: paint.md
rustfest-berlin-2016/: Cargo.toml  code-style.css  slide-style.css  slides.html  tango-build.rs
rustfest-berlin-2016/src/: lib.md  main.md  slides.md
rustfest-zurich-2017/: .gitignore  Cargo.toml  build.rs  header.html
rustfest-zurich-2017/src/: a00.md  c00_nikos_ghost.md  d00_interlude.md  e00_epochs_past.md  g00_epochs_present.md  i00_epochs_future.md  l00_end_of_it.md  lib.rs  main.rs  z00.md
rustfest-zurich-2017/weight-derive/: Cargo.toml
rustfest-zurich-2017/weight-derive/src/: lib.rs
two-years-of-rust/: Cargo.toml  build.rs
two-years-of-rust/src/: a00.md  lib.md
