[package]
name = "curry-on2015"
version = "0.1.0"
authors = ["Felix S. Klock II <pnkfelix@pnkfx.org>"]

build = "build.rs"

# The preprocessor is the `tango` crate, so we need to add that
# to the build-dependencies.

[build-dependencies.tango]
# git = "https://github.com/pnkfelix/tango"
# name = "tango"

[build-dependencies.cmd-pandoc]
path = "/Users/fklock/Dev/Mozilla/pnk-presents/cmd-pandoc"

# Since the lib may be a tango file stored in `src/lib.md`, we need to
# explicitly specify that this is a library project with a `[lib]`
# section, which then requires an explicit name.

[lib]
name = "lib"
