[package]
name = "iwaco-2017"
version = "0.1.0"
authors = ["Felix S. Klock II <pnkfelix@pnkfx.org>"]

build = "build.rs"

[dependencies]
rayon = "0.7.0"
cursive = "0.5"
cairo-rs = "0.1.3"

[dependencies.gtk]
version = "0.1.3"
features = ["v3_10"]

# The preprocessor is the `tango` crate, so we need to add that
# to the build-dependencies.

[build-dependencies]
tango = "^0.4.*"
cmd-pandoc = "^0.2.*"
mon-artist = "0.1"
pandoc = "0.6.*"
pandoc_ast = "0.6.*"
walkdir = "1.0"

# Since the lib may be a tango file stored in `src/lib.md`, we need to
# explicitly specify that this is a library project with a `[lib]`
# section, which then requires an explicit name.

[lib]
name = "lib"
